--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,9 +1,13 @@
 Package: coolgraph
-Title: What the Package Does (one line, title case)
+Title: Makes Graphs for Preorganized Tables
 Version: 0.0.0.9000
-Authors@R: person("First", "Last", email = "first.last@example.com", role = c("aut", "cre"))
-Description: What the package does (one paragraph).
-Depends: R (>= 3.3.1)
-License: What license is it under?
+Authors@R: person("Adam", "Ziada", email = "first.last@example.com", role = c("aut", "cre"))
+Description: Provides functions to generate heatmaps, facited-colored plots, and
+    size mapped plots to represent 3 variables on the same graph.
+Depends:
+    R (>= 3.3.1)
+License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
+RoxygenNote: 5.0.1
+Imports: dplyr, ggplot2
