--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,4 +10,4 @@ License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 5.0.1
-Imports: dplyr, ggplot2
+Imports: dplyr, ggplot2, viridis
