--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,3 +11,8 @@ Encoding: UTF-8
 LazyData: true
 RoxygenNote: 5.0.1
 Imports: dplyr, ggplot2, viridis
+Suggests: knitr,
+    rmarkdown
+VignetteBuilder: knitr
+URL: https://github.com/Adam-Ziada/coolgraph
+BugReports: https://github.com/Adam-Ziada/coolgraph/issues
